Make sure MenuOption has `text-overflow: ellipsis`
https://files.facepunch.com/CarsonKompon/2026/March/09_11-11-KeyCanary.png

--- a/Code/UI/Components/MenuOption.razor.scss
+++ b/Code/UI/Components/MenuOption.razor.scss
@@ -12,6 +12,11 @@ MenuOption
 	width: 24px;
 }
 
+Label
+{
+    text-overflow: ellipsis;
+}
+
 MenuOption:hover
 {
 	color: white;
